Enhance product management and WhatsApp communication features (#140)
* add more capability around add product & whatsapp comunication

* Refactor EmployeeLeaveService: reorganize imports and update filter logic in getEmployeeLeavesByDateRangeAsDto method

* feat: Implement inventory request workflow and global document management

- Added InventoryApprovalRouter to determine approver based on user role.
- Enhanced CatalogController to support product catalog filtering by category.
- Introduced ClassroomInsightsDTO and added insights endpoint in ClassroomController.
- Updated DataLoadController to include session update functionality.
- Created GlobalDocumentController for managing global documents with CRUD operations.
- Developed InventoryRequestController to handle inventory requests with submission and approval actions.
- Added new view models for inventory request actions and submissions.
- Implemented new email templates for inventory request notifications and appraisal reviews.
- Updated application configuration to use environment variables for sensitive data.
- Created database migration scripts for new tables related to global documents and inventory requests.